kubernetes/infrastructure/core/configs/rook-ceph/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    lbipam.cilium.io/ips: "10.69.65.10"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - ceph.lilstrudel.io
      secretName: rook-ceph-dashboard-tls
  rules:
    - host: ceph.lilstrudel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 7000
